work report bug (z-index bug)

--- a/src/widgets/modalReport/ui/modalReport.scss
+++ b/src/widgets/modalReport/ui/modalReport.scss
@@ -1,6 +1,6 @@
 .modalReport{
     background-color: #02140E;
-    z-index: 10000000000000;
+    z-index: 1;
     padding: 16px 16px 24px 16px;
     border-radius: 24px;
     max-width: 748px;
